--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   --primaryColor: #222831;
@@ -14,6 +16,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+::placeholder{
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+}
+
+input{
+  font-size: 1em;  
+  font-family: 'Poppins', sans-serif;   
 }
 
 body {
